docs: ✏️ update swagger
