# api/gasclient.go
@@ -57,6 +57,13 @@ func (server *Server) RunCronFetchGas() {
 
 }
 
+// gasinfo godoc
+// @Summary      gasinfo
+// @Description  get 24 hours gas prices
+// @Tags         gasinfo
+// @produce application/json
+// @Success      200  {string}  StatusOK
+// @Router       /gasinfo [GET]
 func (server *Server) GasHandler(c echo.Context) (err error) {
 	getGasInfo, err := server.store.GetAveragePriceByLastDay(context.Background())
 	if err != nil {
