# docs/swagger.yaml
@@ -1,5 +1,5 @@
 basePath: /
-host: localhost:1323
+host: localhost:8080
 info:
   contact:
     email: support@swagger.io
@@ -13,7 +13,58 @@ info:
   title: Ifandonlyif API
   version: "1.0"
 paths:
-  /:
+  /code:
+    post:
+      consumes:
+      - application/json
+      description: register a new user
+      parameters:
+      - description: walletAddress
+        in: body
+        name: walletAddress
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "201":
+          description: Created
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "404":
+          description: Not Found
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: code
+      tags:
+      - code
+  /gasinfo:
+    get:
+      description: get 24 hours gas prices
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+      summary: gasinfo
+      tags:
+      - gasinfo
+  /health:
     get:
       consumes:
       - '*/*'
@@ -79,44 +130,6 @@ paths:
       summary: login
       tags:
       - login
-  /register:
-    post:
-      consumes:
-      - application/json
-      description: register a new user
-      parameters:
-      - description: walletAddress
-        in: body
-        name: walletAddress
-        required: true
-        schema:
-          type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            type: string
-        "201":
-          description: Created
-          schema:
-            type: string
-        "400":
-          description: Bad Request
-          schema:
-            type: string
-        "404":
-          description: Not Found
-          schema:
-            type: string
-        "500":
-          description: Internal Server Error
-          schema:
-            type: string
-      summary: register
-      tags:
-      - register
 schemes:
 - http
 swagger: "2.0"
